Output/slurm-735881.out
  File "/gpfs/mariana/home/akkusu/TBT-practice/TBT_for_VGG.py", line 435
    if criterion == not None:
                    ^^^
SyntaxError: invalid syntax
